# FlashRT-Nexus

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
backends/: README.md
backends/flashrt/: flashrt_backend.cpp  flashrt_backend.h  flashrt_model_abi_adapter.cpp  flashrt_model_abi_adapter.h  flashrt_model_adapter.cpp  flashrt_model_adapter.h  flashrt_model_extension_internal.h  flashrt_model_loader.cpp  flashrt_model_loader.h  flashrt_runtime_adapter.cpp  flashrt_runtime_adapter.h
backends/stub/: stub_backend.cpp  stub_backend.h
core/: README.md
core/include/capsule/: capsule.h
core/src/: capsule.cpp
docs/: Capsule_Core_Spec_EN.md  Capsule_Core_Spec_ZH.md  Capsule_Serving_Design_EN.md  Capsule_Serving_Design_ZH.md  Capsule_Serving_Integration_EN.md  Capsule_Serving_Integration_ZH.md  adaptation_map.md  changes.md  cpp_embedded.md  embedded.md  mindon_pi05_embedded.md  model_runtime.md  modes.md  pr_review_checklist.md  serve.md
docs/figures/: capsule_four_verbs.mmd  model_runtime_adoption.mmd
examples/: mindon_pi05_embedded_host.cpp  pi05_embedded.py  pi05_libero.yaml
examples/pi05_action_chunk/: README.md  run.py
examples/pi05_rtc/: README.md  run.py
examples/qwen36_spec_planner/: README.md  run.py
host/: README.md
host/include/capsule/: model_runtime.h
host/src/: model_executor_internal.h  model_runtime.cpp
nexus/: README.md
nexus/embedded/: session.cpp  session.h
nexus/modes/: README.md  rtc_action_chunk.cpp  rtc_action_chunk.h  rtc_action_chunk_c.cpp  rtc_action_chunk_c.h
nexus/modes/action_chunk/: README.md  action_chunk.cpp  action_chunk.h  action_chunk_c.cpp  action_chunk_c.h  rtc_action_chunk_compat.cpp  rtc_action_chunk_compat.h
nexus/modes/rtc_action_chunk/: README.md  rtc_action_chunk.cpp  rtc_action_chunk.h  rtc_action_chunk_c.cpp  rtc_action_chunk_c.h
nexus/schedulers/: stage_dag.cpp  stage_dag.h  stage_dag_c.cpp  stage_dag_c.h
nexus/state/: graph_store.cpp  graph_store.h
serve/: __init__.py  cli.py  deployment.py  embedded.py  ffi.py  manifest.py  producers.py  session.py
serve/producer_plugins/: __init__.py  pi05.py
serve/transports/: __init__.py  act_http.py
tests/: backend_conformance.h  check_model_adapter_architecture.cmake  gate_pi05_action_chunk.py  gate_pi05_action_chunk_composed.py  gate_pi05_action_chunk_fusion.py  gate_pi05_action_chunk_prefix.py  gate_pi05_action_chunk_projected.py  gate_pi05_embedded.py  gate_pi05_export.py  gate_pi05_model.py  gate_pi05_native_embedded.py  gate_pi05_native_projected_port.py  gate_pi05_rtc_action_chunk.py  gate_python_producer.py  nexus_action_chunk_abi.py  test_action_chunk.cpp  test_action_chunk_oracle.cpp  test_conformance.cpp  test_core.cpp  test_embedded_session.cpp  test_flashrt_gpu.cpp  test_model_abi_adopt.cpp  test_model_adopt.cpp  test_model_loader.cpp  test_nexus_l2.cpp  test_runtime_adopt.cpp  test_serve_shell.py
tests/fixtures/: model_provider.cpp
